--- a/src/pages/Team/styles.scss
+++ b/src/pages/Team/styles.scss
@@ -4,6 +4,7 @@
   grid-template-rows: max-content 1fr;
   justify-items: center;
   row-gap: 2rem;
+  margin-bottom: 5rem;
 
   &-header {
     display: flex;
